--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -19,6 +19,7 @@
     font-weight: 500;
     font-size: 18px;
     margin: 0 10px 0 10px;
+    cursor: pointer;
 }
 .postDate{
     font-weight: 300;
