--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -15,6 +15,7 @@ box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.39);
     width: 45px;
     border-radius: 50px;
     object-fit: cover;
+    cursor: pointer;
 }
 .shareInput{
     width: 100%;
