--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -31,6 +31,7 @@ box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.39);
 .shareHr{
     margin: 10px 0 10px 0;
 }
+
 .shareBottom{
     display: flex;
     justify-content: space-around;
@@ -66,4 +67,21 @@ box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.39);
 }
 .shareOptionButton:hover{
     background: rgb(22, 224, 22);
+}
+
+.shareImgContainer{
+    padding: 10px 0;
+    position: relative;
+}
+.shareImgTemp{
+    width: 100%;
+    object-fit: cover;
+}
+.cancelImg{
+    position: absolute;
+    top: 15px;
+    right: 5px;
+    color: red;
+    font-size: 30px;
+    cursor: pointer;
 }
