--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -19,11 +19,11 @@ box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.39);
 }
 .shareInput{
     width: 100%;
-    height: 25px;
     margin-left: 10px;
     border-radius: 30px;
     padding: 4px;
     padding-left: 10px;
+    padding-top: 10px;
     border: 1px solid rgb(24, 23, 23);
     font-size: 15px;
 }
