--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -40,6 +40,9 @@
     justify-content: space-between;
     border-radius: 10px;
 }
+.loginError{
+    color: red;
+}
 .loginInput{
     height: 50px;
     border-radius: 10px;
