--- a/client/src/components/profileRightBar/profileRightBar.css
+++ b/client/src/components/profileRightBar/profileRightBar.css
@@ -1,3 +1,4 @@
+
 .rightBar{
     flex: 3;
 }
@@ -59,3 +60,9 @@
     align-items: center;
     justify-content: space-between;
 }
+
+/* @media screen and (max-width: 480px) {
+    .rightBar {
+        display: none;
+    }
+} */
