--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -100,3 +100,20 @@
     color: white;
     font-size: 22px;
 }
+@media screen and (max-width: 480px) {
+    .topbarCenter {
+        display: none;
+    }
+    .topbarContainer{
+        width: 100%;
+    }
+    .topbarFeatures{
+        display: none;
+    }
+    .topbarRight{
+        justify-content: flex-end;
+    }
+    .homePic{
+        margin-right: 15px;
+    }
+}
