--- a/client/src/components/leftbar/leftbar.css
+++ b/client/src/components/leftbar/leftbar.css
@@ -72,3 +72,8 @@
     object-fit: cover;
     margin-right: 10px;
 }
+@media screen and (max-width: 480px) {
+    .leftBar{
+        display: none;
+    }
+}
