--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -63,3 +63,8 @@
     cursor: pointer;
     border-bottom: 1px dashed grey;
 }
+@media screen and (max-width: 480px) {
+    .post{
+        width: 100%;
+    }
+}
