--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -85,3 +85,23 @@ box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.39);
     font-size: 30px;
     cursor: pointer;
 }
+@media screen and (max-width: 480px) {
+    .shareWrapper {
+        width: 100%;
+        padding: 0;
+        border-radius: 0px;
+    }
+    .shareOptions{
+        flex-direction: column;
+        padding: 0px;
+    }
+    .shareOptions:hover{
+        background:white;
+    }
+    .shareInput{
+        width: 65%;
+    }
+    .shareTop{
+        justify-content: space-evenly;
+    }
+}
