--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -2,3 +2,8 @@
     display: flex;
     width: 100%;
 }
+/* @media screen and (max-width: 480px) {
+    .homeContainer{
+        width: 95%;
+    }
+} */
