--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -39,3 +39,9 @@
 .profileRightBottom{
     display: flex;
 }
+@media screen and (max-width: 480px) {
+    .profileRightTop{
+        width: 100%;
+        margin-bottom: 150px;
+    }
+}
