--- a/client/src/components/profileEdit/profileEdit.css
+++ b/client/src/components/profileEdit/profileEdit.css
@@ -26,7 +26,7 @@ body.active-modal {
 .overlay {
     background: rgba(49,49,49,0.8);
 }
-.modal-content {
+.modal-content-edit {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -91,4 +91,12 @@ body.active-modal {
     font-size: 40px;
     cursor: pointer;
     color: green;
+}
+@media screen and (max-width: 480px) {
+    .modal-content-edit{
+        width: 300px;
+    }
+    /* .editInput{
+        height: 20px;
+    } */
 }
