--- a/client/src/components/leftbar/leftbar.css
+++ b/client/src/components/leftbar/leftbar.css
@@ -74,6 +74,13 @@
 }
 @media screen and (max-width: 480px) {
     .leftBar{
-        display: none;
+        flex: 0;
+        margin: 0;
+    }
+    .leftBarWrapper{
+        padding: 15px 0 25px 10px;
+    }
+    .leftBarHr{
+        margin: 20px 20px 20px 0px ;
     }
 }
